--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Merchex</title>
+    <link rel="stylesheet" href="{% static 'listings/styles.css' %}">
 </head>
 <body>
-$END$
+    {% block content %}{% endblock %}
 </body>
 </html>
