--- a/merchex/listings/templates/listings/contact.html
+++ b/merchex/listings/templates/listings/contact.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "listings/base.html" %}
+{% block content %}
+    <h1 class="centrer-title blue-title">{{H1}}</h1>
+{% endblock %}
