--- a/merchex/listings/templates/listings/hello.html
+++ b/merchex/listings/templates/listings/hello.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "listings/base.html" %}
+{% block content %}
+    <h1 class="center-title">Hello Django !</h1>
+    <div class="hello-box">
+    <p>Mes {{bands|length}} groupes du moments sont:</p>
+    <ul>
+        {%for band in bands%}
+        <li>{{band.name}}</li>
+        {% endfor %}
+    </ul>
+    </div>
+{% endblock %}
