--- a/merchex/listings/templates/listings/listings.html
+++ b/merchex/listings/templates/listings/listings.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "listings/base.html" %}
+{%block content%}
+    <ul>
+    {% for listing in listings %}
+        <li>{{listing.title}}</li>
+    {% endfor %}
+    </ul>
+{% endblock %}
