--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -4,10 +4,10 @@
     <h2>{{ band.name }}</h2>
 
 <ul>
- <li>Genre : {{ band.genre }}</li>
+ <li>Genre : {{ band.get_genre_display }}</li>
  <li>Année de formation : {{ band.year_formed }}</li>
- <li>Actif : {{ band.active }}</li>
- <li>{{ band.official_homepage }}</li>
+ <li>Actif : {{ band.active | yesno }}</li>
+    <li><a href="{{ band.official_homepage }}">{{ band.official_homepage }}</a></li>
 </ul>
 
 <p>{{ band.biography }}</p>
