--- a/merchex/listings/templates/listings/band.html
+++ b/merchex/listings/templates/listings/band.html
@@ -5,7 +5,7 @@
 
     <ul>
         {%for band in bands%}
-        <li>{{band.name}}</li>
+        <li><a href="{% url 'band_details' band.id %}">{{band.name}}</a></li>
         {% endfor %}
     </ul>
     </div>
