--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-{%load static%}
+{%load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Merchex</title>
-    <link rel="stylesheet" href="{% static 'listings/styles.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'listings/styles.css' %}">
 </head>
 <body>
+<nav>
+    <a href="{% url 'band_list' %}">Groupes</a>
+</nav>
     {% block content %}{% endblock %}
 </body>
 </html>
