--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -9,6 +9,7 @@
 <body>
 <nav>
     <a href="{% url 'band_list' %}">Groupes</a>
+    <a href="{% url 'listing_list' %}">Listings</a>
 </nav>
     {% block content %}{% endblock %}
 </body>
