--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -12,5 +12,12 @@
 
 <p>{{ band.biography }}</p>
 
+    <h2 class="center-title">Les articles en rapport avec ce groupe</h2>
+    <ul>
+    {% for listing in band.listing_set.all %}
+        <li><a href="{% url 'listing_details' listing.id%}"> {{ listing.title }}</a></li>
+    {% endfor %}
+    </ul>
+
     <a href="{% url "band_list" %}">Retour à tous les groupes</a>
 {% endblock %}
