--- a/merchex/listings/templates/listings/listings.html
+++ b/merchex/listings/templates/listings/listings.html
@@ -2,7 +2,7 @@
 {%block content%}
     <ul>
     {% for listing in listings %}
-        <li>{{listing.title}}</li>
+        <li> <a href="{% url 'listing_details' listing.id %}">{{listing.title}}</a></li>
     {% endfor %}
     </ul>
 {% endblock %}
