--- a/merchex/listings/static/listings/styles.css
+++ b/merchex/listings/static/listings/styles.css
@@ -7,8 +7,18 @@ html{
     font-family: "Segoe UI", system-ui, sans-serif;
     font-size: 20px;
 }
-.hello-box{
-    background: #83B4FF;
+a{
+    background: #09090b;
+    color: #ececec;
+    text-decoration: none;
+    padding: .2em;
+    border-radius: .3em;
+}
+ul{
+    list-style: none;
+}
+.black-box{
+    background: #18181b;
     padding: 0.5em;
     border-radius: 0.5em;
 }
@@ -41,4 +51,58 @@ dd{
 }
 .text-xl{
     font-size: 3em;
+}
+.text-l{
+    font-size: 2em;
+}
+.band-list{
+    display: flex;
+    justify-content: space-around;
+}
+.band-list-item{
+    list-style: none;
+    background: #09090b;
+}
+.band-list-link{
+    text-decoration: none;
+    color:#ececec
+}
+.listing-list{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+.listing-card{
+    border: 1px solid #e4e4e7;
+    border-radius: .5em;
+    padding: 1em;
+}
+.p-t--1em{
+    padding-top: 1em;
+}
+.band-detail-list li{
+    margin-top: 1em;
+}
+.form-grid {
+    display: grid;
+    grid-template-columns: 100px 150px;
+}
+.form-grid input{
+    margin-bottom: 1em;
+}
+
+.form-band-add{
+    max-width: 25vw;
+}
+
+.form-band-add p{
+    display: flex;
+    justify-content: space-between;
+}
+.button{
+    background: #09090b;
+    color: white;
+    border-radius: .2em;
+    border: none;
+    padding: .5em;
 }
