--- a/merchex/listings/templates/listings/about-us.html
+++ b/merchex/listings/templates/listings/about-us.html
@@ -1,6 +1,4 @@
 {% extends "listings/base.html" %}
 {% block content %}
-
-    <h1 class="blue-title">{{H1}}</h1>
-    <p>{{message}}</p>
+	<h1 class="text-xl center-title">A propos de nous</h1>
 {% endblock %}
