--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -10,6 +10,8 @@
 <nav>
     <a href="{% url 'band_list' %}">Groupes</a>
     <a href="{% url 'listing_list' %}">Listings</a>
+    <a href="{% url 'contact' %}">Contact</a>
+    <a href="{% url 'about_us' %}">A propos</a>
 </nav>
     {% block content %}{% endblock %}
 </body>
