--- a/merchex/listings/templates/listings/listings.html
+++ b/merchex/listings/templates/listings/listings.html
@@ -1,8 +1,19 @@
 {% extends "listings/base.html" %}
 {%block content%}
-    <ul>
+    <h1>Nos articles</h1>
+    <ul class="listing-list">
     {% for listing in listings %}
-        <li> <a href="{% url 'listing_details' listing.id %}">{{listing.title}}</a></li>
+        <li> <div class="listing-card">
+            <a href="{% url 'listing_details' listing.id %}">{{listing.title}}</a>
+            <dt class="p-t--1em">
+                {% if listing.sold %}
+                    En stock
+                {% else %}
+                    Hors stock
+                {% endif %}
+            </dt>
+        </div>
+        </li>
     {% endfor %}
     </ul>
 {% endblock %}
