--- a/merchex/listings/templates/listings/listings_details.html
+++ b/merchex/listings/templates/listings/listings_details.html
@@ -4,7 +4,7 @@
     <h1 class="blue-title"> {{ listing.title }}</h1>
     <blockquote>{{ listing.type }} de {{ listing.band }} parut en {{ listing.year }}</blockquote>
     <dd>{{ listing.description }}</dd>
-    <p class="text-xl  center-title">{% if sold  %}
+    <p class="text-xl  center-title">{% if listing.sold  %}
         <span class="dark-text">Vendu</span>
         {% else %}
         <span class="green-span">En stock</span>
