--- a/merchex/listings/templates/listings/email-sent.html
+++ b/merchex/listings/templates/listings/email-sent.html
@@ -1,7 +1,7 @@
 {% extends "listings/base.html" %}
 {% block content %}
 
-    <h1 class="text-xl center-title blue-title"> Retour de votre demande</h1>
+    <h1 class="text-xl center-title"> Retour de votre demande</h1>
 
     <p class="text-xl">{{ message }}</p>
 {% endblock %}
