--- a/merchex/listings/templates/listings/band_create.html
+++ b/merchex/listings/templates/listings/band_create.html
@@ -1,7 +1,7 @@
 {% extends "listings/base.html" %}
 {% block content %}
 	<h1> Ajout d'un groupe</h1>
-    <form action="" method="post" novalidate>
+    <form action="" method="post">
     <div class="form-band-add">
         {% csrf_token %}
         {{ form.as_p }}
