--- a/merchex/listings/static/listings/styles.css
+++ b/merchex/listings/static/listings/styles.css
@@ -61,7 +61,6 @@ dd{
 }
 .band-list-item{
     list-style: none;
-    background: #09090b;
 }
 .band-list-link{
     text-decoration: none;
@@ -73,10 +72,22 @@ dd{
     justify-content: space-around;
 }
 .listing-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     border: 1px solid #e4e4e7;
     border-radius: .5em;
     padding: 1em;
+    height: 30vh;
 }
+.listing-card dt{
+    padding-top: .2em;
+}
+.listing-detail{
+    margin-top: 1em;
+}
+
 .p-t--1em{
     padding-top: 1em;
 }
@@ -105,4 +116,37 @@ dd{
     border-radius: .2em;
     border: none;
     padding: .5em;
+}
+.flex{
+    display: flex;
+}
+.column{
+    flex-direction: column;
+}
+.link-change{
+    background: none;
+    color: #09090b;
+    text-align: center;
+    border: #09090b solid 1px;
+    max-width: 5em;
+}
+.justify-center{
+    justify-content: center;
+}
+.justify-between{
+    justify-content: space-between;
+}
+
+.item-center{
+    align-items: center;
+}
+.h-6{
+    height: 6em;
+}
+.link-delete{
+    background: #cd112c;
+    color: #ececec;
+    text-decoration: none;
+    padding: .2em .5em;
+    border-radius: .3em;
 }
