--- a/merchex/listings/templates/listings/band_change.html
+++ b/merchex/listings/templates/listings/band_change.html
@@ -1,10 +1,9 @@
 {% extends "listings/base.html" %}
 {% block content %}
-	<h1>Ajout d'une nouvelle annonce</h1>
+	<h1>Mise à jour d'un groupe</h1>
     <form action="" method="post">
-
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Envoyer" class="button">
+    <input type="submit" value="Mettre à jour">
     </form>
 {% endblock %}
